Dosage 2.10 (released xx.xx.2014)

Features:
- comics: Comic strips are downloaded in parallel.

Changes:
- cmdline: Ensure only one instance of dosage is running to prevent
  accidental DoS when fetching multiple comics of one site.


Dosage 2.9 (released 22.12.2013)

Features:
- events: Ensure maximum display width on RSS and HTML images.
- comics: Added EdmundFinney, Gaia, GaiaGerman, InternetWebcomic,
  NotInventedHere, RedsPlanet, RomanticallyApocalyptic,
  ScandinaviaAndTheWorld, TheGamerCat, Weregeek.
  Thanks to Null000 for the patches.
  Closes: GH bug #48

Fixes:
- comics: Get larger images from GoComics.
- comics: Fix AbstruseGoose and QuestionabelContent.
  Closes: GH bug #50


Dosage 2.8 (released 8.12.2013)

Features:
- comics: Added image text saving for comic strips.
  Used in xkcd and AbstruseGoose comics to store the
  image title text.
  Closes: GH bug #42

Fixes:
- comics: Fixed ForLackOfABetterComic.
- comics: Store large xkcd images if available.
  Closes: GH bug #43


Dosage 2.7 (released 24.11.2013)

Fixes:
- comics: Fixed GoComic image URL matcher.
- comics: Fixed AxeCop, PensAndTales_FireflyCross.
- comics: Remove broken ComicFury_Rosie, InsideOut, SodiumEyes.


Dosage 2.6 (released 12.11.2013)

Features:
- comics: Added DarthsAndDroid
- docs: Document how to add new comics in docs/adding_new_comics.txt
  Closes: GH bug #39

Fixes:
- comics: Fixed all DrunkDuckk comics since the domain has moved.
- comics: Fixed AllTheGrowingThings, AxeCop, BookOfBiff, BroodHollow,
  Carciphona, CatAndGirl, CatsAndCameras, ChainsawSuit, ElGoonishShive,
  EvilInc, Garanos, GleefulNihilism, LeastICouldDo, MysteriesOfTheArcana,
  NineteenNinetySeven, NoNeedForBushido, Oglaf, OneQuestion,
  OverCompensating, ScenesFromAMultiverse, Shivae, Spinnerette,
  Wigu, Wonderella, Wulffmorgenthaler
  Closes: GH bug #41
- comics: Removed broken AetheriaEpics, ChuckBrain, Fallen, HMHigh,
  IanJay, InsideOut, Nodwick, WebcomicsNation_ClownSamurai

Changes: