@@ -1,11 +1,13 @@
 Dosage 2.10 (released xx.xx.2014)
 
 Features:
-- comics: Comic strips are downloaded in parallel.
+- comics: Comic strips are downloaded in parallel. To prevent overload
+  of comic sites, no more than on download thread per host is allowed.
 
 Changes:
 - cmdline: Ensure only one instance of dosage is running to prevent
   accidental DoS when fetching multiple comics of one site.
+- comics: Wait up to 1 second between two URL page downloads.
 
 
 Dosage 2.9 (released 22.12.2013)
